# promoweb

./: .gitignore  PROJECT_SUMMARY.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install.sh  package-lock.json  package.json  setup-dev.sh
backend/: .env.example  Dockerfile  README.md  env.example  package.json  pyproject.toml  requirements-minimal.txt  requirements-simple.txt  requirements-sqlite.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_shipping_analytics_tables.py  003_add_exchange_rate_table.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  analytics.py  auth.py  cart.py  categories.py  orders.py  payments.py  products.py  shipping.py  users.py
backend/app/core/: config.py  database.py  logging.py  middleware.py  redis.py
backend/app/models/: __init__.py  analytics.py  cart.py  order.py  payment.py  product.py  promotion.py  shipping.py  user.py
backend/app/schemas/: __init__.py  analytics.py  cart.py  common.py  order.py  payment.py  product.py  promotion.py  shipping.py  user.py
backend/app/services/: __init__.py  auth.py  currency.py  geography.py  notifications.py  order.py  payment.py
backend/app/templates/email/: base.html  email_verification.html  order_confirmation.html
backend/src/: app.module.ts  main.ts
backend/src/database/: database.config.ts  database.module.ts  setup.ts
backend/src/database/entities/: category.entity.ts  order-item.entity.ts  order.entity.ts  payment.entity.ts  product.entity.ts  shipment.entity.ts  user.entity.ts
backend/src/database/seeds/: initial-data.seed.ts
backend/src/modules/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/modules/auth/guards/: roles.guard.ts
backend/src/modules/auth/strategies/: jwt.strategy.ts  local.strategy.ts
backend/src/modules/categories/: categories.controller.ts  categories.module.ts  categories.service.ts
backend/src/modules/orders/: orders.controller.ts  orders.module.ts  orders.service.ts
backend/src/modules/payments/: payments.controller.ts  payments.module.ts  payments.service.ts
backend/src/modules/products/: products.controller.ts  products.module.ts  products.service.ts
backend/src/modules/shipments/: shipments.controller.ts  shipments.module.ts  shipments.service.ts
backend/src/modules/users/: users.controller.ts  users.module.ts  users.service.ts
database/: README-sample-data.md  init-db.sql  init-promoweb.sql  load-sample-data.sh  sample-data.sql
docs/: # Projet PromoWeb Africa - Use-Cases et Entités  DEVELOPER.md  diagrammes-uml.md  prompts-developpement.md  stack technique.md
(+44 files in other folders)
